--- a/README.html
+++ b/README.html
@@ -169,7 +169,8 @@ pre code {
 
 <div id="bagpype" class="section level2">
 <h2># BagPype</h2>
-<p>Bagging Enhanced Network Analysis Clustering Pipeline Available network algorithms: - Leiden - Louvain</p>
+<p>Bagging Enhanced Network Analysis Clustering Pipeline</p>
+<p>Available network algorithms: - Leiden - Louvain</p>
 </div>
 <div id="directions" class="section level2">
 <h2>Directions</h2>
